--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,20 +6,30 @@
     android:background="@color/lightBlueTransparent"
     tools:context=".activity.homeScreen.settings.security.ChangePasswordActivity">
 
-    <ImageView
-        android:id="@+id/ivBack"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_margin="@dimen/_15sdp"
-        android:paddingStart="@dimen/_5sdp"
-        android:src="@drawable/ic_back"/>
+    <LinearLayout
+        android:id="@+id/lyt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:padding="@dimen/_10sdp"
+        android:background="@drawable/all_corners">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:paddingStart="@dimen/_5sdp"
+            android:src="@drawable/ic_back"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txtHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/ivBack"
+        android:layout_below="@id/lyt"
+        android:layout_marginTop="@dimen/_10sdp"
         android:text="Change Password"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -69,7 +79,9 @@
         android:layout_below="@id/etvConfirmPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_20sdp"
-        android:text="   Save   " />
+        android:text="Save"
+        android:paddingStart="@dimen/_20sdp"
+        android:paddingEnd="@dimen/_20sdp"/>
 
     <TextView
         android:id="@+id/txtForgotPassword"
