--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -116,6 +116,8 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:paddingStart="@dimen/_40sdp"
         android:paddingEnd="@dimen/_40sdp"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/blue"
         android:text="SIGNUP"
         android:textSize="@dimen/_15sdp" />
 
