--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/lightBlueTransparent"
     android:orientation="vertical"
     tools:context=".activity.homeScreen.HomeScreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bottom_corner"
         android:orientation="horizontal"
+        android:paddingTop="@dimen/_10sdp"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -19,14 +21,16 @@
             android:layout_width="@dimen/_33sdp"
             android:layout_height="@dimen/_33sdp"
             android:layout_margin="@dimen/_15sdp"
-            android:src="@drawable/menu_img" />
+            android:src="@drawable/menu_img"
+            app:tint="@color/white" />
 
         <ImageView
             android:id="@+id/ivNotification"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_marginTop="@dimen/_19sdp"
-            android:src="@drawable/notification_img" />
+            android:src="@drawable/notification_img"
+            app:tint="@color/white" />
 
         <TextView
             android:id="@+id/txtHelloName"
@@ -34,15 +38,15 @@
             android:layout_height="@dimen/_25sdp"
             android:layout_marginStart="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:ellipsize="marquee"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="end"
             android:hint="Hello, Anand"
-            android:layout_marginEnd="@dimen/_10sdp"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/_20sdp"
             android:textStyle="italic" />
     </LinearLayout>
@@ -68,11 +72,9 @@
                 android:layout_marginEnd="@dimen/_3sdp"
                 android:layout_weight="1"
                 android:background="@drawable/top_left_layout_shape"
-
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -101,11 +103,10 @@
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_weight="1"
                 android:background="@drawable/top_right_layout_shape"
-
+                android:backgroundTint="@color/blue"
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -124,7 +125,8 @@
                     android:layout_height="@dimen/_50sdp"
                     android:layout_gravity="end"
                     android:layout_margin="@dimen/_8sdp"
-                    android:src="@drawable/img_upcoming" />
+                    android:src="@drawable/img_upcoming"
+                    app:tint="@color/white" />
             </LinearLayout>
         </LinearLayout>
 
@@ -144,7 +146,6 @@
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -162,7 +163,8 @@
                     android:layout_height="@dimen/_50sdp"
                     android:layout_gravity="end"
                     android:layout_margin="@dimen/_8sdp"
-                    android:src="@drawable/img_list" />
+                    android:src="@drawable/img_list"
+                    app:tint="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -172,11 +174,9 @@
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_weight="1"
                 android:background="@color/blue"
-
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -195,7 +195,8 @@
                     android:layout_height="@dimen/_50sdp"
                     android:layout_gravity="end"
                     android:layout_margin="@dimen/_8sdp"
-                    android:src="@drawable/image_profile" />
+                    android:src="@drawable/image_profile"
+                    app:tint="@color/white" />
 
             </LinearLayout>
 
@@ -214,11 +215,9 @@
                 android:layout_marginEnd="@dimen/_3sdp"
                 android:layout_weight="1.5"
                 android:background="@drawable/bottom_left_layout_shape"
-
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -246,11 +245,9 @@
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_weight="0.5"
                 android:background="@drawable/bottom_right_layout_shape"
-
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:orientation="vertical"
-
                 android:stateListAnimator="@anim/animation">
 
                 <TextView
@@ -274,42 +271,51 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginHorizontal="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginHorizontal="@dimen/_40sdp"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:layout_marginBottom="@dimen/_25sdp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginHorizontal="@dimen/_60sdp"
-        android:layout_marginTop="@dimen/_28sdp"
-        android:layout_marginBottom="@dimen/_30sdp"
-        android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_35sdp"
-        android:gravity="center"
-        android:text="MeetEase"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18sdp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:background="@drawable/top_corner"
+        android:orientation="vertical"
+        android:paddingVertical="@dimen/_10sdp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="MeetEase"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginHorizontal="@dimen/_60sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginHorizontal="@dimen/_40sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -325,7 +331,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/lightBlue"
+                android:background="@color/lightLightBlue"
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
@@ -343,6 +349,7 @@
                     android:layout_marginTop="@dimen/_10sdp"
                     android:gravity="center_horizontal"
                     android:hint="Anand Patel"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/_18sdp" />
 
                 <TextView
@@ -354,6 +361,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="center_horizontal"
+                    android:textColor="@color/black"
                     android:hint="anandkasodiya7007@gmail.com"
                     android:marqueeRepeatLimit="marquee_forever"
                     android:singleLine="true"
