--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -93,6 +93,8 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:paddingStart="@dimen/_40sdp"
         android:paddingEnd="@dimen/_40sdp"
+        app:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         android:text="LOGIN" />
 
     <LinearLayout
