--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -89,6 +89,19 @@
                         android:textColor="@color/white"
                         android:textSize="@dimen/_20sdp" />
 
+                    <TextView
+                        android:id="@+id/txtSelectedDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_marginHorizontal="@dimen/_10sdp"
+                        android:layout_weight="1"
+                        android:gravity=""
+                        android:text="2023-12-23"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_20sdp" />
+
+
+
                 </LinearLayout>
 
             </LinearLayout>
