--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#F8F5FA</color>
     <color name="gray">#D3D3D3</color>
     <color name="red">#EF0606</color>
     <color name="brown">#C37E41</color>
@@ -11,5 +11,6 @@
     <color name="darkBlue">#122F7C</color>
     <color name="blue">#2E4583</color>
     <color name="lightBlue">#90CAF9</color>
+    <color name="lightLightBlue">#BFD7ED</color>
     <color name="lightBlueTransparent">#5B90CAF9</color>
 </resources>
