--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -8,9 +8,11 @@
     tools:context=".activity.entryModule.GuideActivity">
 
     <LinearLayout
+        android:id="@+id/lyt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:background="@drawable/all_corners"
         android:padding="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,16 +32,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/_18sdp"
         android:layout_centerInParent="true"
+        android:layout_marginHorizontal="@dimen/_18sdp"
         app:cardCornerRadius="@dimen/_15sdp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_10sdp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -48,14 +50,14 @@
                 <Button
                     android:id="@+id/btnSkip"
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginEnd="@dimen/_5sdp"
+                    android:text="Skip"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:text="Skip"/>
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -63,49 +65,51 @@
                 android:id="@+id/imgSteps"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_280sdp"
-                android:scaleType="fitXY"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:src="@drawable/back_ground_image"/>
+                android:scaleType="fitXY"
+                android:src="@drawable/back_ground_image" />
 
             <TextView
                 android:id="@+id/txtSteps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:textSize="@dimen/_18ssp"
-                android:text="anand patel my name is anand patel " />
+                android:text="anand patel my name is anand patel "
+                android:textSize="@dimen/_18ssp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp">
+
                 <Button
                     android:id="@+id/btnPrevious"
                     style="@style/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginStart="@dimen/_5sdp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:backgroundTint="@color/blue"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:text="Previous"
                     android:textColor="@color/white"
-                    android:text="Previous"/>
+                    app:backgroundTint="@color/blue"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <Button
                     android:id="@+id/btnNext"
                     style="@style/button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:backgroundTint="@color/blue"
-                    android:textColor="@color/white"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:paddingStart="@dimen/_20sdp"
                     android:paddingEnd="@dimen/_20sdp"
-                    android:text="Next"/>
+                    android:text="Next"
+                    android:textColor="@color/white"
+                    app:backgroundTint="@color/blue"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
